--- a/LocalNoteAssmt3/LocalNote/MainPage.xaml
+++ b/LocalNoteAssmt3/LocalNote/MainPage.xaml
@@ -56,11 +56,13 @@
             </Grid.ColumnDefinitions>
             <Grid>
                 <TextBox x:Name="textBox" TextWrapping="Wrap" Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Height="56" d:LayoutOverrides="LeftPosition, RightPosition" Foreground="#FF343434" BorderThickness="10" PlaceholderText="Search for Notes..."/>
-                <ListView x:Name="listView" BorderThickness="2" ItemTemplate="{StaticResource NotesModelTemplate}" ItemsSource="{Binding Notes}" Margin="0,54,0,0" SelectedItem="{Binding SelectedNote, Mode=TwoWay}" SelectionMode="Extended"
+                <ListView x:Name="listView" BorderThickness="2" ItemTemplate="{StaticResource NotesModelTemplate}"
+                          ItemsSource="{Binding Notes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                          Margin="0,54,0,0" SelectedItem="{Binding SelectedNote, Mode=TwoWay}" SelectionMode="Extended"
                           SelectionChanged="listView_SelectionChanged" />
             </Grid>
             <Grid Grid.Column="1">
-                <TextBox x:Name="textBoxBody" TextWrapping="Wrap" Text="{Binding TestString, Mode=TwoWay}"
+                <TextBox x:Name="textBoxBody" TextWrapping="Wrap" Text="{Binding NoteBody, Mode=TwoWay}"
                          IsReadOnly="True"
                          AcceptsReturn="True" />
             </Grid>
